@@ -1,10 +1,20 @@
 import java.io.*;
+
+/**
+ * This class deals with finding the path of the default downloads folder.
+ */
 class DefaultDownloadFolderLocationFinder {
+    //    private static final String REG_NAME = "reg query \"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\" /v {374DE290-123F-4565-9164-39C4925E467B}";
     private static final String REG_TOKEN = "REG_EXPAND_SZ";
-    private static final String REG_NAME = "reg query \"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\" /v {374DE290-123F-4565-9164-39C4925E467B}";
+
+    /**
+     * This function finds the path of the default downloads folder.
+     * @return The path of the default downloads folder as a String object.
+     */
     public static String findPath() {
         try {
-            Process process = Runtime.getRuntime().exec(REG_NAME);
+//            Process process = Runtime.getRuntime().exec(REG_NAME); // Deprecated
+            Process process = new ProcessBuilder("reg", "query", "\"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\User Shell Folders\"", "/v", "{374DE290-123F-4565-9164-39C4925E467B}").start();
             StreamReader reader = new StreamReader(process.getInputStream());
             reader.start();
             process.waitFor();
@@ -25,14 +35,15 @@ class DefaultDownloadFolderLocationFinder {
         }
     }
     static class StreamReader extends Thread {
-        private InputStream is;
-        private StringWriter sw;
+        private final InputStream is;
+        private final StringWriter sw;
 
         StreamReader(InputStream is) {
             this.is = is;
             sw = new StringWriter();
         }
 
+        @Override
         public void run() {
             try {
                 int c;
@@ -43,7 +54,7 @@ class DefaultDownloadFolderLocationFinder {
 
             }
         }
-        String getResult() {
+        public String getResult() {
             return sw.toString();
         }
     }
